# Agentsquad

./: .env.example  .gitignore  Dockerfile  PLAN.md  RATE_LIMITS.md  README.md  RUNTHIS.md  walkthrough.md
.agent/skills/agent-architect/: SKILL.md
.agent/skills/agent-architect/examples/: template_agent.py
.agent/workflows/: add-tests.md  ai-agent-setup.md  api-security.md  code-optimization.md  code-review.md  debug-errors.md  deploy-render.md  deploy-vercel.md  documentation.md  git-cleanup.md  performance-audit.md  refactor-clean.md
backend/: Dockerfile  README.md  requirements.txt
backend/app/: api.py  main.py
backend/app/agents/meeting_prep/: flow.py  pyproject.toml
backend/app/agents/meeting_prep/src/meeting_prep/: crew.py  main.py  schemas.py
backend/app/agents/meeting_prep/src/meeting_prep/config/: agents.yaml  tasks.yaml
backend/app/agents/research/: flow.py  squad.py  tools.py
backend/app/agents/sales/: flow.py  personas.py  tools.py
backend/app/core/: config.py  utils.py
backend/app/middleware/: __init__.py  rate_limiter.py
demo_assets/: INSTRUCTIONS.md
docs/: guide.md  plans.md
frontend/: .env.production  package-lock.json
frontend/src/: App.jsx  index.css  style.css
frontend/src/components/: LoginPage.jsx  MeetingPrepForm.jsx  ProcessLog.jsx  ResearchForm.jsx  ResultsView.jsx  SalesForm.jsx
frontend/src/utils/: api.js  errorHandler.js
project_docs/: RATE_LIMITS.md  RUNTHIS.md
