[project]
name = "market_scout"
version = "0.1.0"
description = "Market Scout AI crew for researching and briefing"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1",
    "crewai-tools>=1.8.1",
    "crewai[google-genai,tools]==1.8.1",
    "gradio>=4.0.0",
    "duckduckgo-search>=5.0.0",
    "langchain-community>=0.0.10",
]

[project.scripts]
market_scout = "market_scout.main:run"
run_crew = "market_scout.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
